# obot-converter

./: CNAME  Cargo.toml  README.md  index.html
.github/workflows/: static.yml
bots/ybot_fmt/: README.md
src/: cli.rs  lib.rs  main.rs
src/formats/: echo.rs  fembot.rs  gdr.rs  kdbot.rs  mhr.rs  mhr_binary.rs  mod.rs  omegabot.rs  omegabot_2.rs  plain_text.rs  replay.rs  replaybot.rs  rush.rs  silicate.rs  tasbot.rs  tcm.rs  url.rs  xbot.rs  xdbot.rs  ybot.rs  zbot.rs
www/: bun.lockb  index.html  package.json  svelte.config.js  tailwind.config.js
www/src/components/: ClickRow.svelte  ClickTable.svelte  ClickView.svelte  ReplayView.svelte  SettingsMenu.svelte
www/src/lib/: index.ts  settings.ts
www/src/routes/: +layout.ts  +page.svelte
