[package]
name = "obot-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
dlhn = "0.1.6"
eyre = "0.6.9"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.50"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
] }
