[package]
name = "obot-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[workspace]
members = [".", "bots/ybot_fmt"]

[dependencies]
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
dlhn = "0.1.6"
rmp-serde = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.121"
simd-json = "0.13.10"
slc_oxide = "0.2.0"
thiserror = "1.0.50"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
] }
ybot_fmt = { path = "bots/ybot_fmt" }
